# xsmp-modeler-core

./: pom.xml
org.eclipse.xsmp.profile.simsat.tests/: .classpath  .gitignore  .project  pom.xml
org.eclipse.xsmp.profile.simsat.tests/include/ns/: AModel.h  AnAbstractModel.h  AnInterface.h
org.eclipse.xsmp.profile.simsat.tests/smdl/: test.xsmpcat
org.eclipse.xsmp.profile.simsat.tests/src/ns/: AModel.cpp  AnAbstractClass.cpp  AnAbstractModel.cpp
org.eclipse.xsmp.profile.xsmp_sdk.tests/: .classpath  .gitignore  .project  CMakeLists.txt  build.properties  pom.xml
org.eclipse.xsmp.profile.xsmp_sdk.tests/include/Test/: TestModel.h
org.eclipse.xsmp.profile.xsmp_sdk.tests/include/ns/: AModel.h  AnAbstractModel.h  AnInterface.h
org.eclipse.xsmp.profile.xsmp_sdk.tests/smdl/: test.xsmpcat
org.eclipse.xsmp.profile.xsmp_sdk.tests/src/Test/: TestModel.cpp
org.eclipse.xsmp.profile.xsmp_sdk.tests/src/ns/: AModel.cpp  AnAbstractClass.cpp  AnAbstractModel.cpp
org.eclipse.xsmp.profile.xsmp_sdk.tests/tests/: CMakeLists.txt  CMakeLists.txt.in  SimpleTest.cpp  SimpleTest2.cpp  SimpleTest3.cpp  Test1.cpp
org.eclipse.xsmp.vscode_extension/: index.html  package.json  vite.config.js
org.eclipse.xsmp.vscode_extension/media/: settings.js  style.css
org.eclipse.xsmp.vscode_extension/src/: extension.ts  settings.js  util.ts  xsmpSettingsEditor.ts
org.eclipse.xsmp.vscode_extension/src/newProject/: newProjectPanel.ts
org.eclipse.xsmp.vscode_extension/src/views/new-project/: App.vue  main.js
org.eclipse.xsmp.vscode_extension/src/views/new-project/assets/: main.scss
org.eclipse.xsmp.vscode_extension/src/views/new-project/components/: Configuration.vue  FolderOpen.vue
org.eclipse.xsmp.vscode_extension/src/views/new-project/store/: index.js
